# drpo

./: README.md  pyproject.toml  requirements.txt
scripts/tldr/: dpo.sh  drpo.sh  ppo.sh  rm.sh  sft.sh
src/tldr/: dpo.py  drpo.py  ppo.py  rm.py  sft.py
