[project]
name = "drpo"
version = "0.0.1"
description = "dataset reset policy optimization for TL;DR"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = [
  "reinforcement learning",
  "machine learning",
  "transformers"
]
authors = [
  {name = "Jonathan Chang", email = "jdc396@cornell.edu"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies", "readme"]

[tool.setuptools.dynamic]
dependencies = {file=["requirements.txt"]}
readme = {file=["README.md"], content-type = "text/markdown"}

[project.urls]
"Homepage" = "https://github.com/Cornell-RL/drpo"
"Source" = "https://github.com/Cornell-RL/drpo"

[tool.setuptools.package-data]
"*" = ["*.sh"]

[build-system]
requires = [
  "setuptools>=68.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"
